--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.RulesKash"
         tools:targetApi="31">
         <activity
+            android:name=".HomeDashBoard"
+            android:exported="false"
+            android:label="@string/title_activity_home_dash_board" />
+        <activity
             android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
@@ -25,8 +29,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.RulesKash">
-        </activity>
+            android:theme="@style/Theme.RulesKash"></activity>
     </application>
 
 </manifest>
